--- a/CIT160GradingCoreUtility/Properties/launchSettings.json
+++ b/CIT160GradingCoreUtility/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "CIT160GradingCoreUtility": {
-      "commandName": "Project",
-      "commandLineArgs": "\"C:\\Users\\joshf\\Desktop\\WebServer\\template1.json\" \"C:\\Users\\joshf\\Desktop\\WebServer\\test.html\""
+      "commandName": "Project"
     }
   }
 }
