--- a/CIT160Grader/CIT160Grader.csproj
+++ b/CIT160Grader/CIT160Grader.csproj
@@ -9,6 +9,11 @@
     <PackageReference Include="RestSharp" Version="106.11.4" />
     <PackageReference Include="Selenium.Support" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
+    <PackageReference Include="System.Collections" Version="4.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CIT160Cheater\CIT160Cheater.csproj" />
   </ItemGroup>
 
 </Project>
